# local-whisper

./: CHANGELOG.md  README.md  pyproject.toml  setup.sh
.github/workflows/: ci.yml  docs-pages.yml  release-app.yml
LocalWhisperUI/: Package.resolved  Package.swift
LocalWhisperUI/Sources/LocalWhisperUI/: AboutView.swift  AdvancedPanel.swift  AppMain.swift  AppState.swift  FirstRunManager.swift  GrammarPanel.swift  IPCClient.swift  MenuBarView.swift  OnboardingView.swift  OverlayWindowController.swift  ServiceManager.swift  UpdaterController.swift
appcast/: appcast.xml
doc/: quickstart.mdx  troubleshooting.mdx
doc/product/: tts.mdx
doc/reference/: installation.mdx
docs/: configuration.md
packaging/: entitlements.plist
plans/: tier1-remove-homebrew-dependency.md  tier2-finalization.md  tier2-implementation-context.md  tier2-standalone-signed-app.md
scripts/: build_bundle.sh  bundle_smoke_test.sh  local_test_install.sh  local_test_uninstall.sh  make_appcast.py  make_dmg.sh  notarize_app.sh  release.sh  sign_bundle.sh
scripts/bundle/: wh  wh.py
src/whisper_voice/: __init__.py  __main__.py  _ffmpeg.py  _install.py  _launchagent.py  _service_identity.py  app.py  app_commands.py  app_pipeline.py  grammar.py
src/whisper_voice/backends/: __init__.py  modes.py
src/whisper_voice/backends/apple_intelligence/: backend.py
src/whisper_voice/cli/: build.py  constants.py  doctor.py  lifecycle.py  main.py
src/whisper_voice/config/: schema.py
src/whisper_voice/engines/: status.py  whisperkit_runtime.py
tests/: test_cli_setup.py  test_ffmpeg_vendoring.py  test_install_app.py  test_launchagent.py  test_macos_overlay_contract.py  test_model_download_state.py  test_modes.py  test_product_contracts.py  test_release_pipeline_contracts.py  test_service_readiness.py  test_service_singleton.py  test_update_mechanism.py
