[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "local-whisper"
version = "1.6.9"
description = "Local macOS dictation with local transcription and grammar cleanup"
readme = "README.md"
license = "PolyForm-Noncommercial-1.0.0"
requires-python = ">=3.11,<3.13"
authors = [
    { name = "Soroush Yousefpour" }
]
keywords = ["voice", "dictation", "transcription", "macos", "local", "privacy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "License :: Other/Proprietary License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "sounddevice>=0.4.0",
    "numpy>=2.4.4",
    "requests>=2.25.0",
    "pynput>=1.8.1",
    "pyobjc-framework-Cocoa>=12.1",
    "pyobjc-framework-Quartz>=12.1",
    "parakeet-mlx>=0.5.1",
    "qwen3-asr-mlx>=0.1.1",
    "kokoro-mlx>=0.1.2",
    "soundfile>=0.13.1",
    "misaki[en]>=0.9.4",
    # Kokoro/misaki pull pydantic through spaCy. Keep the core wheel
    # aligned with pydantic's strict import-time ABI check.
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
]

[project.optional-dependencies]
apple-intelligence = [
    "apple-fm-sdk>=0.1.1",
]

[project.scripts]
wh = "whisper_voice:main"

[project.urls]
Homepage = "https://gabrimatic.info"
Repository = "https://github.com/gabrimatic/local-whisper"
"Bug Tracker" = "https://github.com/gabrimatic/local-whisper/issues"
Changelog = "https://github.com/gabrimatic/local-whisper/blob/main/CHANGELOG.md"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]  # line length handled by formatter

[tool.hatch.build.targets.wheel]
packages = ["src/whisper_voice"]
include = ["src/whisper_voice/assets/*.png"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/docs",
    "/install.sh",
    "/setup.sh",
    "/src/whisper_voice/assets/*.png",
]

[tool.pytest.ini_options]
markers = [
    "integration: tests requiring live services (transcription engine, grammar backend)",
]
